tests/ui/pattern/usefulness/match-vec-unreachable.stderr
error: unreachable pattern
  --> $DIR/match-vec-unreachable.rs:8:9
   |
LL |         [a, (2, 3), _] => (),
   |         -------------- matches all the relevant values
LL |         [(1, 2), (2, 3), b] => (),
   |         ^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/match-vec-unreachable.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-vec-unreachable.rs:18:9
   |
LL |         [ref a, _, _, ..] => { println!("{}", a); }
   |         ----------------- matches all the relevant values
LL |         [_, _, _, _, _] => { }
   |         ^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/match-vec-unreachable.rs:26:9
   |
LL |         ['a', 'b', 'c', ref _tail @ ..] => {}
   |         ------------------------------- matches all the relevant values
LL |         ['a', 'b', 'c'] => {}
   |         ^^^^^^^^^^^^^^^ no value can reach this

error: aborting due to 3 previous errors

